added option '--add-modules java.xml.bind'